# rapier-3d-game

./: Cargo.toml
src/: camera.rs  main.rs  map.rs  player.rs  shooting.rs
