[package]
name = "rapier-3d-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# TODO: Replace the * by the latest version numbers.
bevy = "0.11.0"
bevy_rapier3d = "0.22.0"
bevy-inspector-egui = "0.19.0"
bevy_third_person_camera = "0.1.3"
bevy_debug_grid = "0.2"
